# processamento-digital-imagens

./: README.md
parte 1/2 - regions (exercicio)/: regions.cpp
parte 1/3 - filestorage (exercicio)/: filestorage.cpp
parte 2/1 - dft/: CMakeLists.txt
parte 2/1 - dft (exercicio)/: CMakeLists.txt  dft_filestorage.cpp
parte 2/2 - dftfilter/: CMakeLists.txt  dftfilter.cpp
parte 2/2 - dftfilter (exercicio)/: dftfilter.cpp
parte 2/3 - canny/: CMakeLists.txt
parte 2/3 - cannypoints (exercicio)/: CMakeLists.txt  cannypoints.cpp
parte 2/3 - pontilhismo/: CMakeLists.txt  pontilhismo.cpp
parte 2/4 - kmeans/: kmeans.cpp
parte 2/4 - kmeans (exercicio)/: CMakeLists.txt  kmeans.cpp
parte 3/1 - Extração de Contornos/: CMakeLists.txt  contornos.cpp
parte 3/2 - Momentos de Hu para regiões/: momentos-regioes.cpp
parte 3/2 - Momentos de Hu para regiões (exercicio)/: momentos-regioes.cpp
parte 3/4 - morfologia matemática (exercicio)/: CMakeLists.txt  morfologia.cpp
